--- a/app/views/gru/show.html.erb
+++ b/app/views/gru/show.html.erb
@@ -61,5 +61,5 @@
   </tbody>
 </table>
 
-<%= button_to "Pagar", gru_index_path %>
+<%= button_to "Pagar", pagamento_gru_index_path(@gru) %>
 <%= link_to "Voltar", gru_index_path %>
