--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,11 +3,12 @@
   <head>
     <title>Geare</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
@@ -18,9 +19,8 @@
 
     <!-- PagTesouro API - scripts necessários -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/3.6.6/iframeResizer.min.js"></script>
-<script>
-  iFrameResize({ heightCalculationMethod: "documentElementOffset" }, ".iframe-epag");
-</script>
-
+    <script>
+      iFrameResize({ heightCalculationMethod: "documentElementOffset" }, ".iframe-epag");
+    </script>
   </body>
 </html>
