--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,16 +1,22 @@
-<nav>
-  <ul>
-    <li>Home</li>
-    <li>
-      <%= link_to "Log in",  new_user_session_path unless user_signed_in? %>
-      <%= link_to "Log out", destroy_user_session_path, method: :delete if user_signed_in? %>
-    </li>
+<nav class="navbar navbar-expand-lg bg-light">
+  <ul class="navbar-nav">
+    <!-- HOME button -->
+    <li class="nav-item"><%= link_to "Home", root_path, class: "nav-link active" %></li>
+
+    <!-- MOSTRAR GRU button -->
     <% if user_signed_in? %>
-      <li> Mostrar GRU </li>
+      <li class="nav-item"> Mostrar GRU </li>
       <% if policy(current_user).admin? %>
-        <li><%= link_to "Nova Guia de Recolhimento", new_gru_path %></li>
+        <li class="nav-item"><%= link_to "Nova Guia de Recolhimento", new_gru_path, class: "nav-link active" %></li>
       <% end %>
     <% end %>
+
+    <!-- LOG IN e LOG OUT buttons -->
+    <li class="nav-item">
+      <%= link_to "Log in",  new_user_session_path, class: "nav-link active" unless user_signed_in? %>
+      <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link active" if user_signed_in? %>
+    </li>
+
   </ul>
 </nav>
 </ br>
