fixed the GRU status upon creating. Added some bootstrap styling.Basic Validation. Prevented normal user from seeing GRU of other users.

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,6 +7,8 @@
     <% if user_signed_in? %>
       <li class="nav-item"> Mostrar GRU </li>
       <% if policy(current_user).admin? %>
+
+        <!-- NOVA GUIA button -->
         <li class="nav-item"><%= link_to "Nova Guia de Recolhimento", new_gru_path, class: "nav-link active" %></li>
       <% end %>
     <% end %>
